Optimize graph and the maze runner